# hsku

./: .gitlab-ci.yml  LICENSE  README.md  hsku.cabal
.github/workflows/: test-apidocs.yml
cli/: Main.hs
languages/: german.yml
lib/: HsKu.hs
lib/HsKu/: JSON.hs  Web.hs
src/: HsKu.hs
src/HsKu/: Load.hs
test/: Main.hs
web/HsKu/: Web.hs
webservice/: Main.hs
