cabal-version:  3.0
name:           hsku
version:        0.0.1
license:        MIT
author:         Mirko Westermeier
build-type:     Simple

extra-source-files: languages/*.yml

common basics
    default-language:   Haskell2010
    default-extensions: OverloadedStrings, TupleSections
    build-depends:      base >= 4.14.0.0
                      , containers
                      , directory
                      , filepath
                      , text
                      , extra
    ghc-options:        -Wall

library
    import:           basics
    exposed-modules:  HsKu, HsKu.Load
    build-depends:    yaml, megaparsec, mtl
    hs-source-dirs:   src

test-suite hsku-test
    import:           basics
    type:             exitcode-stdio-1.0
    build-depends:    hsku, hspec, temporary
    hs-source-dirs:   test
    main-is:          Main.hs
