cabal-version:  3.0
name:           hsku
version:        0.0.1
license:        MIT
author:         Mirko Westermeier
build-type:     Simple

extra-source-files: languages/*.yml

common basics
    default-language:   Haskell2010
    default-extensions: OverloadedStrings, TupleSections
    build-depends:      base >= 4.14.0.0
                      , containers
                      , directory
                      , filepath
                      , text
                      , extra
    ghc-options:        -Wall

common web
    default-extensions: TypeOperators, DataKinds, DeriveGeneric
    build-depends:      aeson, servant, servant-server, warp

library
    import:           basics
    exposed-modules:  HsKu, HsKu.Load
    build-depends:    yaml, megaparsec, mtl
    hs-source-dirs:   lib

library hsku-web
    import:             basics, web
    build-depends:      hsku
    exposed-modules:    HsKu.Web
    hs-source-dirs:     web

executable hsku-webservice
    import:             basics, web
    build-depends:      hsku, hsku-web
    hs-source-dirs:     webservice
    main-is:            Main.hs

test-suite hsku-test
    import:             basics, web
    type:               exitcode-stdio-1.0
    default-extensions: QuasiQuotes
    build-depends:      hsku
                      , hsku-web
                      , hspec
                      , hspec-wai
                      , hspec-wai-json
                      , uri-encode
                      , temporary
    hs-source-dirs:     test
    main-is:            Main.hs
