cabal-version:  3.0
name:           hsku
version:        0.0.1
license:        MIT
author:         Mirko Westermeier
build-type:     Simple

extra-source-files: languages/*.yml

common basics
    default-language:   Haskell2010
    default-extensions: OverloadedStrings
                      , TupleSections
                      , TypeOperators
                      , DataKinds
                      , DeriveGeneric
    build-depends:      base >= 4.14.0.0
                      , containers
                      , directory
                      , filepath
                      , text
                      , extra
                      , aeson
                      , servant
                      , servant-server
    ghc-options:        -Wall

library
    import:           basics
    exposed-modules:  HsKu, HsKu.Load, HsKu.Web
    build-depends:    yaml, megaparsec, mtl
    hs-source-dirs:   lib

executable hsku-webservice
    import:             basics
    build-depends:      hsku, warp
    hs-source-dirs:     webservice
    main-is:            Main.hs

test-suite hsku-test
    import:             basics
    type:               exitcode-stdio-1.0
    default-extensions: QuasiQuotes
    build-depends:      hsku
                      , hspec
                      , hspec-wai
                      , hspec-wai-json
                      , uri-encode
                      , temporary
    hs-source-dirs:     test
    main-is:            Main.hs
